Enhance SEO with meta tags and update client ID
Added meta tags for SEO and updated Google client ID.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IMPERIA | BLOCK SYSTEM</title>
+    <meta name="description" content="Imperia Social - yangi do'stlar orttirish va muloqot qilish uchun zamonaviy platforma.">
+<meta name="keywords" content="tanishuv, chat, muloqot, imperia social, yangi do'stlar, sarvar-byt">
+<meta name="author" content="Sarvar">
+<meta property="og:title" content="Imperia Social">
+<meta property="og:description" content="Yangi do'stlar bilan tanishing.">
+<meta property="og:image" content="https://sarvar-byt.github.io/TANISHUV/logo.png">
+<meta property="og:url" content="https://sarvar-byt.github.io/TANISHUV/">
+<meta property="og:type" content="website">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;600;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://accounts.google.com/gsi/client" async defer></script>
@@ -98,7 +107,7 @@
         <div class="login-card">
             <h2 style="margin-bottom: 15px;">IMPERIA 🔮</h2>
             <p id="login-msg" style="margin-bottom: 20px; font-size: 0.9rem; color: #666;">Davom etish uchun tizimga kiring</p>
-            <div id="g_id_onload" data-client_id="YOUR_ID" data-callback="handleSignIn"></div>
+            <div id="g_id_onload" data-client_id="604367639726-lkgcd0b96a9k6g9a5etdcvavk2o3r0oa.apps.googleusercontent.com" data-callback="handleSignIn"></div>
             <div class="g_id_signin" data-type="standard" data-shape="pill"></div>
             <p style="margin: 15px 0; font-size: 0.8rem; color: #999;">yoki</p>
             <button onclick="guestEnter()" style="background:none; border:none; color:#764ba2; font-weight:900; cursor:pointer;">MEHMON BO'LIB KO'RISH</button>
